--- a/README
+++ b/README
@@ -23,3 +23,7 @@ $ titr
 >>> tt.query('select * from tracked_period')                                                                                                                                             
 [Record(period=DateTimeTZRange(datetime.datetime(2019, 10, 30, 23, 10, 44, 120589, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), datetime.datetime(2019, 10, 30, 23, 15, 44, 120597, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), '[]'), activity_id='ticket1'),
  Record(period=DateTimeTZRange(datetime.datetime(2019, 10, 30, 23, 11, 14, 405513, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), None, '[)'), activity_id='ticket2')]
+
+>> tt.start('ticket1')
+>> tt.start('ticket2')
+>> tt.stop()
