--- a/README
+++ b/README
@@ -7,23 +7,25 @@ postgres_connection_string: <connection string>
 psql -1 -v ON_ERROR_STOP=ON -f schema.sql <connection string>
 
 $ titr
->>> tt.new_activity('work', 'support', 'ticket1')
->>> tt.new_activity('work', 'support', 'ticket2')
-
->>> import datetime
->>> tt.new_tracked_period('ticket1', datetime.datetime.now(), datetime.datetime.now() + datetime.timedelta(minutes=5))
->>> tt.new_tracked_period('ticket2', datetime.datetime.now(), None)
+>>> tt.new_activity('work', 'support', 'ticket1')                                                                                                                                         
+>>> tt.new_activity('work', 'support', 'ticket2')                                                                                                                                         
 
 >>> tt.activities()                                                                                                                                                                       
-[Record(id='work', parent_id=None, id_path='work'),
- Record(id='support', parent_id='work', id_path='work / support'),
- Record(id='ticket1', parent_id='support', id_path='work / support / ticket1'),
- Record(id='ticket2', parent_id='support', id_path='work / support / ticket2')]
+id       parent_id    id_path
+-------  -----------  ------------------------
+work                  work
+support  work         work / support
+ticket1  support      work / support / ticket1
+ticket2  support      work / support / ticket2
 
->>> tt.query('select * from tracked_period')                                                                                                                                             
-[Record(period=DateTimeTZRange(datetime.datetime(2019, 10, 30, 23, 10, 44, 120589, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), datetime.datetime(2019, 10, 30, 23, 15, 44, 120597, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), '[]'), activity_id='ticket1'),
- Record(period=DateTimeTZRange(datetime.datetime(2019, 10, 30, 23, 11, 14, 405513, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), None, '[)'), activity_id='ticket2')]
+>>> tt.start('ticket1')                                                                                                                                                                   
+>>> tt.start('ticket2')                                                                                                                                                                   
+>>> tt.stop()                                                                                                                                                                             
 
->> tt.start('ticket1')
->> tt.start('ticket2')
->> tt.stop()
+>>> tt.daily_report()                                                                                                                                                                     
+id_path                   total
+------------------------  --------------
+work                      0:00:10.391696
+work / support            0:00:10.391696
+work / support / ticket2  0:00:05.254698
+work / support / ticket1  0:00:05.136998
